--- a/GDAS-validation/gdas_config/3dvar_drpcg.yaml.j2
+++ b/GDAS-validation/gdas_config/3dvar_drpcg.yaml.j2
@@ -2,7 +2,7 @@ cost function:
   cost type: 3D-Var
   time window:
     begin: '{{ ATM_WINDOW_BEGIN | to_isotime }}'
-    length: $(ATM_WINDOW_LENGTH)
+    length: '{{ ATM_WINDOW_LENGTH }}'
     bound to include: begin 
   analysis variables: &3dvars [ua,va,t,ps,sphum,ice_wat,liq_wat,o3mr]
   geometry:
@@ -11,11 +11,11 @@ cost function:
       field table filename: ./fv3jedi/field_table
     akbk: ./fv3jedi/akbk.nc4
     layout:
-    - $(layout_x)
-    - $(layout_y)
-    npx: $(npx_ges)
-    npy: $(npy_ges)
-    npz: $(npz_ges)
+    - {{ layout_x }}
+    - {{ layout_y }}
+    npx: {{ npx_ges }}
+    npy: {{ npy_ges }}
+    npz: {{ npz_ges }}
     field metadata override: ./fv3jedi/fv3jedi_fieldmetadata_restart.yaml
   background:
     datapath: ./bkg
@@ -29,8 +29,17 @@ cost function:
     state variables: [ua,va,t,DZ,delp,ps,sphum,ice_wat,liq_wat,o3mr,phis,
                       slmsk,sheleg,tsea,vtype,stype,vfrac,stc,smc,snwdph,
                       u_srf,v_srf,f10m]
-  background error: !INC ${BERROR_YAML}
-  observations: !INC ${OBS_LIST}
+  background error:
+{% filter indent(width=4) %}
+{% set berror_list = 'BERROR_YAML' | getenv('atm/berror/berror.yaml.j2') %}
+{% include berror_list %}
+{% endfilter %}
+  observations:
+{% filter indent(width=4) %}
+{% set atm_obs_list = 'OBS_LIST' | getenv('atm/obs/lists/gdas_prototype_3d.yaml.j2') %}
+{% include atm_obs_list %}
+{% endfilter %}
+
 variational:
   minimizer:
     algorithm: DRPCG
@@ -44,11 +53,11 @@ variational:
         field table filename: ./fv3jedi/field_table
       akbk: ./fv3jedi/akbk.nc4
       layout:
-      - $(layout_x)
-      - $(layout_y)
-      npx: $(npx_anl)
-      npy: $(npy_anl)
-      npz: $(npz_anl)
+      - {{ layout_x }}
+      - {{ layout_y }}
+      npx: {{ npx_anl }}
+      npy: {{ npy_anl }}
+      npz: {{ npz_anl }}
       field metadata override: ./fv3jedi/fv3jedi_fieldmetadata_restart.yaml
     diagnostics:
       departures: bkgmob
